Fixed overflow

--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -13,7 +13,7 @@
     //border-bottom: rgba(0,0,0,0.16) solid 1px;
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 100vw;
 }
 
 .nav-title-container {
